@@ -37,9 +37,12 @@
         </configuration>
         </plugin>
         <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
           <configuration>
-            <argLine>-Xmx24g --enable-preview</argLine>
+            <argLine>--enable-preview --add-modules jdk.incubator.vector -Xmx20g</argLine>
+            <parallel>classesAndMethods</parallel>
+            <forkCount>4</forkCount>
           </configuration>
         </plugin>
       </plugins>
